--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wayland-protocols (1.11-1~bpo9+1) stretch-backports; urgency=medium
+
+  * Rebuild for stretch-backports.
+
+ -- Andreas Boll <andreas.boll.dev@gmail.com>  Thu, 01 Feb 2018 10:01:03 +0100
+
 wayland-protocols (1.11-1) unstable; urgency=medium
 
   * New upstream release.
