--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wayland-protocols (1.13-1~bpo9+1) stretch-backports; urgency=medium
+
+  * Rebuild for stretch-backports.
+
+ -- Andreas Boll <aboll@debian.org>  Sun, 29 Apr 2018 13:23:44 +0200
+
 wayland-protocols (1.13-1) unstable; urgency=medium
 
   * New upstream release.
