--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wayland-protocols (1.13-1~bpo9+1sr1) stretch-backports; urgency=medium
+
+  * Add NXP patches from rel_imx_4.9.123_2.3.0_8mm_ga
+    (git format-patch 1.13..rel_imx_4.9.123_2.3.0_8mm_ga)
+
+ -- Josua Mayer <josua@solid-run.com>  Tue, 18 Sep 2018 15:10:01 +0200
+
 wayland-protocols (1.13-1~bpo9+1) stretch-backports; urgency=medium
 
   * Rebuild for stretch-backports.
